syntax = "proto3";
package proto;

option go_package = "protos/productinfo";
option php_namespace = "GRPC\\ProductInfo";
option php_metadata_namespace = "GRPC\\ProductInfo\\GPBMetadata";

service ProductInfo {
	rpc addProduct(Product) returns (ProductID);
	rpc getProduct(ProductID) returns (Product);
}

message Product {
	string id = 1;
	string name = 2;
	string description = 3;
}

message ProductID {
	string value = 1;
}